Fixed alignment of main index vs login and register pages.

--- a/TigerTaxOnline/Content/LandingPage.css
+++ b/TigerTaxOnline/Content/LandingPage.css
@@ -5,7 +5,6 @@
 .intro-header {
     padding-top: 50px;
     padding-bottom: 50px;
-    text-align: center;
     color: #DB8655;
     background-color: #384D54;
     width: 100%;
